# gloggur

./: .agent-scaffold.json  .env.example  .gitignore  .gloggur.yaml  .venv  AGENTS.md  CLAUDE.md  DONEs.md  README.md  TODOs.md  conftest.py  coverage.xml  generate_embedding_breakdown.py  issues.jsonl  phase1_report.md  phase1_smoke_report.md  pyproject.toml  quick_validation.md  quick_verification.md
.agents/: anti-patterns.md
.agents/architecture/: module-map.md
.agents/context/: ubiquitous-language.md
.agents/plans/: ci-tree-sitter-prewarm-pin.md
.agents/workflows/: feature-workflow.md
.antigravity/skills/: audit-beads-quality.md  tdd.md
.beads/: .gitignore  clone-contract.json  config.yaml  interactions.jsonl  issues.jsonl
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: feature-implementation.md  git-manager.md
.claude/skills/: bootstrap.md  feature-start.md  grill-me.md  improve-architecture.md  retro.md
.codex/environments/: environment.toml
.codex/skills/: resolve-adopted-artifacts.md  ubiquitous-language.md
.githooks/: _common.sh  beads-pre-commit.sh  post-checkout  post-merge  pre-commit  pre-commit.local  pre-push
.github/workflows/: performance.yml  publish.yml  validation.yml  verification.yml
.gloggur/logs/: search_router.jsonl
benchmarks/: coverage_baseline.json  performance_baseline.json
docs/: ADAPTERS.md  AGENT_INTEGRATION.md  BONKERS_SEARCH_FAILURE_MATRIX.md  ERROR_CODES.md  QUICKSTART.md  RELEASING.md  SEARCH_JSON_V2_MIGRATION.md  VALIDATION.md  VERIFICATION.md  promo.md  semantic-search-embedding-breakdown-base.md  semantic-search-embedding-breakdown.md
docs/legacy-agent-artifacts/: AGENTS.md
docs/state-diagrams/: README.md  application-state.md  artifact-publish-state.md  artifact-restore-state.md  artifact-validate-state.md  find-command-state.md  index-command-state.md  search-command-state.md  simple-command-reference.md  watch-command-state.md
docs/verification_artifacts/: README.md
gloggur/: __init__.py  config.py  models.py
gloggur/cli/: main.py
gloggur/embeddings/: base.py  factory.py  gemini.py  local.py  openai.py
gloggur/indexer/: cache.py  indexer.py
gloggur/parsers/: base.py  registry.py  treesitter_parser.py
gloggur/search/: hybrid_search.py
gloggur/storage/: metadata_store.py  vector_store.py
gloggur/validation/: docstring_validator.py
gloggur/watch/: __init__.py
scripts/: __init__.py  audit_verification_lanes.py  bootstrap_gloggur_env.sh  check_beads_clone_contract.py  check_coverage_baseline.py  check_error_catalog_contract.py  check_error_code_catalog.py  check_quickstart_contract.py  check_startup_readiness.py  gloggur  grant_gloggur_access.sh  run_artifact_smoke.py  run_edge_bench.py  run_packaging_smoke.py  run_provider_probe.py  run_quickstart_smoke.py  run_reference_agent_eval.py  run_smoke.py  run_static_quality_gates.py  run_suite.py  validate_all.py  validate_phase1.py  validate_phase2.py  validate_phase3_4.py
scripts/validation/: __init__.py  fixtures.py  logging_utils.py  report_templates.py  reporter.py  runner.py  test_framework.py  validators.py
scripts/verification/: __init__.py  checks.py  fixtures.py  logging_utils.py  report_templates.py  reporter.py  (+2 more)
tests/: test_checks.py  test_fixtures.py  test_validators.py
(+165 files in other folders)
