[project]
name = "gloggur"
version = "0.1.0"
description = "Symbol-level, incremental codebase indexer for semantic search and precedent retrieval."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Gloggur Contributors"}]
keywords = ["code-search", "indexer", "tree-sitter", "embeddings", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "click>=8.1",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "tree-sitter>=0.25",
  "tree-sitter-language-pack>=0.13.0",
  "sentence-transformers>=2.7",
  "faiss-cpu>=1.8",
  "numpy>=1.26",
  "openai>=1.3",
  "tenacity>=8.3",
]

[project.optional-dependencies]
local = ["sentence-transformers>=2.7"]
openai = ["openai>=1.3"]
dev = [
  "pytest>=8.2.0",
  "black>=24.4.0",
  "mypy>=1.10.0",
  "ruff>=0.4.0",
]

[project.scripts]
gloggur = "gloggur.cli.main:cli"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
